fix: section padding on safari browser

--- a/public/style.css
+++ b/public/style.css
@@ -79,7 +79,7 @@ main {
 }
 
 section {
-  padding-bottom: 20px;
+  padding-bottom: 40px;
 }
 
 .my-button {
